tests/NormalTests/paczka1/fuzzy1/23888309.err
Error in line 11: WnG A67 70,3
Error in line 14: S905 A979 1,3
Error in line 15: eT5TEc2IZ A67 24,5
Error in line 29: 2a6m4E8W A979 95,9
Error in line 27: eT5TEc2IZ A979 50,9
